	- Rename variable wrapping to prepending, to avoid confusion,
	  and rename the static bool same_line_wrap to prepend_wrap to
	  match. (DLR)
	- Properly add a new magicline when needed if, in the process of
	  wrapping, we prepend text to the last line of the file. (DLR)
  break_line()
	- Only include the newline parameter if DISABLE_HELP isn't
	  defined, as it's only used then. (DLR)
  begpar()
	- Return FALSE if foo is NULL, as inpar() does. (DLR)
  backup_lines()
	- Return void instead of a pointer to the copy of the first
	  line, since current will point to the same location after the
	  text is copied and so can be used instead of the old return
	  value. (DLR)
	- Remove unused quote_len parameter. (DLR)
  do_justify()
	- Don't save current_y and restore it if the user unjustifies,
	  as the reset_cursor() called by edit_refresh() after restoring
	  edittop and current will ensure that current_y is restored to
	  its original value. (DLR)
	- Renumber after justifying each individual paragraph, since
	  find_paragraph() needs the line numbers to be right as well as
	  edit_refresh().  This fixes a potential segfault when doing
	  full justify with auto-indent turned on. (DLR)
  do_alt_speller()
	- Move the code that replaces the text of the current file with
	  the text of the spell-checked file into its own function,
	  replace_buffer(). (DLR)
- utils.c:
  is_whole_word()
	- Only include when DISABLE_SPELLER isn't defined, as it's only
	  used then. (DLR)
  get_page_start()
	- Fix test so that we scroll through the line in 8-character
	  chunks when COLS is greater than 8, not when COLS is greater
	  than 9. (DLR)
- winio.c:
  nanoget_repaint()
	- Rename parameter inputbuf to buf, for consistency. (DLR)
  reset_cursor()
	- Rename variable x to xpt, to avoid confusion. (DLR)
  update_line()
	- Remove now-unneeded logic that set the index parameter to zero
	  if the fileptr parameter didn't point to current. (DLR)
  edit_add()